--- a/views/listado/restaurante.hbs
+++ b/views/listado/restaurante.hbs
@@ -18,7 +18,7 @@
       <br>
       <div id="element">{{this.nombre}}</div>
 
-      <div id="prize"> {{this.precio}} €</div>
+      <div id="prize"><b></b> {{this.precio}} €</div>
 
       {{/each}}
 
